# MODULE.bazel

# Choose the most recent version available at
# https://registry.bazel.build/modules/abseil-cpp.
bazel_dep(name = "abseil-cpp", version = "20260107.0")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")
bazel_dep(name = "cpr", version = "1.12.0")
bazel_dep(name = "argparse", version = "3.2.0")
bazel_dep(name = "rules_cc", version = "0.1.1")