# MODULE.bazel

# Choose the most recent version available at
# https://registry.bazel.build/modules/abseil-cpp.
bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "jsoncpp", version = "1.9.6")
bazel_dep(name = "cpr", version = "1.12.0")
bazel_dep(name = "argparse", version = "3.2.0")
bazel_dep(name = "rules_cc", version = "0.1.1")
